packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-15/reproducer-dep.js
function foo(args) {
  const opt = args.v || args.value; // Noncompliant: args can be undefined
}

module.exports = foo;
